# shapelang

./: .gitignore  Cargo.toml  README.md
crates/sl-autodiff/: Cargo.toml
crates/sl-autodiff/src/: lib.rs
crates/sl-backend/: Cargo.toml
crates/sl-backend-cpu/: Cargo.toml
crates/sl-backend-cpu/src/: lib.rs
crates/sl-backend-iree/: Cargo.toml
crates/sl-backend-iree/src/: lib.rs
crates/sl-backend/src/: lib.rs
crates/sl-cli/: Cargo.toml
crates/sl-cli/src/: main.rs
crates/sl-ir/: Cargo.toml
crates/sl-ir/src/: lib.rs
crates/sl-parse/: Cargo.toml
crates/sl-parse/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/sl-types/: Cargo.toml
crates/sl-types/src/: lib.rs
docs/: autodiff.md
examples/mnist/: README.md  train.sl
examples/regression/: README.md  main.sl
stdlib/: dataset.sl  nn.sl  optim.sl  tensor.sl
tests/: parity_check.rs
